Erste Testversion für Nicolas

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="title">
+	<div class="header">
 		<h1>Hannahs Karten</h1>
 	</div>
 	<div class="pages"></div>
@@ -16,7 +16,7 @@
 			Eine Frau und ein Mann lesen die Karten und erledigen die Aufgaben.  
 			Die Frau ist immer in der Rolle von Hanna, der Protagonistin.  
 			Der Mann nimmt im Laufe der Geschichte verschiedene Rollen ein.  
-			Jede Karte hat eine vierstellige Nummer.  
+			Jede Karte hat eine dreistellige Nummer.  
 			Die Karten sind aufsteigend sortiert.  
 			Die oberste Karte auf dem Stapel wird gelesen.  
 			Gelesene Karten werden aus dem Spiel genommen.  
@@ -88,7 +88,7 @@
 
 		<h2 class="documentation__heading">Chatgpt Prompt</h2>
 		<div class="documentation__text">
-			Ich habe ein Kartenspiel erstellt. Die Karten sind in einem Text bereits definiert. Mit # beginnt die nächste Karte. Danach kommt die vierstellige Nummer der Karte, danach ein interner Titel, der nicht auf die Karte gedruckt ist. Darunter steht bis zum nächsten # der Text der Karte. Der reine Text auf der Karte sollte ca. 25 Wörter nicht übersteigen. Wenn du Karten schreibst, benutze bitte eine erotische und klare Sprache. Du musst dich nicht an die vorhandenen Karten halten und kannst gerne kreativ Story ergänzen und weitere Karten einfügen. Bitte gib deine Antwort nicht in Markdown, sondern plain Text, also wieder mit # am Anfang jeder Karte.
+			Ich habe ein Kartenspiel erstellt. Die Karten sind in einem Text bereits definiert. Mit # beginnt immer die nächste Karte. Danach kommt die vierstellige Nummer der Karte, danach ein interner Titel, der nicht auf die Karte gedruckt ist. Darunter steht bis zum nächsten # der Text der Karte. Der reine Text auf der Karte sollte ca. 25 Wörter nicht übersteigen. Wenn du später Karten schreibst, benutze bitte eine erotische und klare Sprache. Du musst dich nicht an die vorhandenen Karten halten und kannst gerne kreativ Story ergänzen und weitere Karten einfügen.
 		</div>
 
 		<h2 class="documentation__heading">Lizenz</h2>
